--- a/src/Components/People/People.css
+++ b/src/Components/People/People.css
@@ -41,6 +41,7 @@
   margin-right: 110px;
   margin-top: 30px;
   margin-left: 0;
+  width: auto;
 }
 
 /* Optional: make image responsive */
@@ -95,6 +96,7 @@
     font-size: 32px;
     text-align: center;
     margin-bottom: 20px;
+    
   }
 
   .people-header p{
@@ -147,6 +149,7 @@
     margin: 0;
     text-align: justify;
     font-size: 20px;
+    width: auto;
     
   }
 
@@ -179,6 +182,7 @@
 
   .people-header {
     font-size: 18px;
+    width: auto;
   }
 
   .people-header p {
